--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <h8>Week 4</h8>
 <br/>
 <h8>9/16/22</h8>
+<br/>
 <h8>On monday we got into groups and began making measurements for our RG machine. On tuesday we finalized the measurments and began cutting them out. We noticed almost immediately that our group's machine was going to be much bigger than most everyone else's. We ran into some issues while making supports. We had an idea to cut down on time which was to intersect two strip of cardboard which slits cut into them but they ended up extremely unbalanced and we decided to redo it entirely. This time, we made supports with 3 solid walls which is working much better, although we had wasted quite a bit of time. This taught us to run ideas by the whole group before exectuting them. On friday we tried to make paper boats float on water with weights on them. I got lucky and was put into a group with someone with an excellent boat design. The idea was a boat with greater surface area on the bottom would float the best, and as it turns out, he was right and we came in first place with 110g.</h8>
-    
+<br/>
+<h8>Week 5</h8>
+<br/>
+<h8>9/23/22</h8>
+<br/>
+<h8>On Monday and Wednesday we spent class finishing our projects. We ran into couple of issues such as our toy car that we were going to use split in two (we ended up using someone els's car). We needed a more secure way to hold back the car before it was released so we attached a ruler to the pulley to act as a wall. It was held in plae by a couple of vertical rods taped to the side of the ramp. Lastly we needed a way to hold the baseball up while the machine was in rest. We flattened a toilet paper roll and threaded two strings through it. The strings were attached to the supports in a way so that the roll could lay flat while suspened and holding the ball. The machine was ready and we put it to the test. We unwrapped a side of one string holding up the roll, dropping the ball, turning the pulley, raising the ruler, releasing the car, speeding down the ramp, connecting with and popping the ballon at the bottom. It worked first try which was a bit of a surprise. This project was fun and it taught me a lot about the importance of improvising.</h8>
 </html>
