--- a/index.html
+++ b/index.html
@@ -20,4 +20,11 @@
 <h8>9/23/22</h8>
 <br/>
 <h8>On Monday and Wednesday we spent class finishing our projects. We ran into couple of issues such as our toy car that we were going to use split in two (we ended up using someone els's car). We needed a more secure way to hold back the car before it was released so we attached a ruler to the pulley to act as a wall. It was held in plae by a couple of vertical rods taped to the side of the ramp. Lastly we needed a way to hold the baseball up while the machine was in rest. We flattened a toilet paper roll and threaded two strings through it. The strings were attached to the supports in a way so that the roll could lay flat while suspened and holding the ball. The machine was ready and we put it to the test. We unwrapped a side of one string holding up the roll, dropping the ball, turning the pulley, raising the ruler, releasing the car, speeding down the ramp, connecting with and popping the ballon at the bottom. It worked first try which was a bit of a surprise. This project was fun and it taught me a lot about the importance of improvising.</h8>
+<br/>
+<h8>Week 7</h8>
+<br/>
+<h8>10/7/22</h8>
+<br/>
+<h8>On Monday we watched a slideshow detailing bioengineering. Nothing too special there. On Wednesday we spent the class period researching and designing prosthesis for animals. I had to take into account what purposes it needed to serve and the challenges that would pose. I chose to design hind leg replacements for a rat. I looked at a lot of accounts such as its skeletal structure and human leg prostheis. I finished my design by the end of class and I think it turned out well.</h8>
+    <img src = "Prosthesis.png" Width = 400px Height = 200px>
 </html>
