--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
     
 <center><img src="https://c.tenor.com/6DufYXK94fEAAAAM/oh-the-misery-wawa.gif" alt="Wawa GIFs | Tenor"/></center>
 
+<h8>Week 2</h8>
+<br/>
+<h8>9/2/22</h8>
+<br/>
+<h8>I'm not really sure what we're supposed to be writing about, but this week was pretty fun. We designed a RudeGoldberg machine. I think that mine is pretty cool but might be a bit much for what we have to wok with. TinkerCad works well enough but I'm having a really hard time with adding the strings to the model so I might just leave them out. I really thought I would win the challenge this week because of all the compliments I was getting while making it. But then out of nowhere they selected a guy a couple seats behind me because of his nintendo switch or whatever.</h8>
+<br/>
 <h8>Week 3</h8>
 <br/>
-<h8>9/12/22</h8>
+<h8>9/9/22</h8>
 <br/>
 <h8>This week we finalized our Rude Goldburg machines, adding measurements and such. For the challenge, we had to create a capital "E" with a partner using exact measurments. I found it relatively easy but that I needed to be extra careful making the measurments and that everythings adds up correctly. I also learned that Tristan, my friend, doesn't know centimeters from inches.</h8>
 <br/>
@@ -21,10 +27,25 @@
 <br/>
 <h8>On Monday and Wednesday we spent class finishing our projects. We ran into couple of issues such as our toy car that we were going to use split in two (we ended up using someone els's car). We needed a more secure way to hold back the car before it was released so we attached a ruler to the pulley to act as a wall. It was held in plae by a couple of vertical rods taped to the side of the ramp. Lastly we needed a way to hold the baseball up while the machine was in rest. We flattened a toilet paper roll and threaded two strings through it. The strings were attached to the supports in a way so that the roll could lay flat while suspened and holding the ball. The machine was ready and we put it to the test. We unwrapped a side of one string holding up the roll, dropping the ball, turning the pulley, raising the ruler, releasing the car, speeding down the ramp, connecting with and popping the ballon at the bottom. It worked first try which was a bit of a surprise. This project was fun and it taught me a lot about the importance of improvising.</h8>
 <br/>
+<h8>Week 6</h8>
+<br/>
+<h8>9/30/22</h8>
+<br/>
+<h8>This week we began learning about computer engineering. We watched a slideshow detailing all of the different disciplines that go into making a computer. On the next day we began dissecting or taking apart an old school laptop. We followed some specific steps, taking out components one by one. We also had a worksheet where we would color and keep track of each of the components we found. By the time we had taken everything out, the laptop was just a shell. The next class we put it back together. Unfortunately for us, we didn't keep track of where each of the screws go. We endd up misreplacing them in the computer so by the end, the outside had a couple of divot caused by screws being too long for where we put them. Our group called these 'computer pimples'.</h8>
+<br/>
 <h8>Week 7</h8>
 <br/>
 <h8>10/7/22</h8>
 <br/>
 <h8>On Monday we watched a slideshow detailing bioengineering. Nothing too special there. On Wednesday we spent the class period researching and designing prosthesis for animals. I had to take into account what purposes it needed to serve and the challenges that would pose. I chose to design hind leg replacements for a rat. I looked at a lot of accounts such as its skeletal structure and human leg prostheis. I finished my design by the end of class and I think it turned out well.</h8>
+<br/>
     <img src = "Prosthesis.png" Width = 400px Height = 200px>
+<br/>
+<h8>Week 8</h8>
+<br/>
+<h8>10/14/22</h8>
+<br/>
+<h8>This week we moved into the aerospace engineering section of engineering. Pretty much working with planes and space craft. It's not just the rockets either. Apparently there are entire companies dedicated to each of the appliances which are put onto spaceships and stations. We used tinkercad to design a bottle rocket with the goal of making one that travels the farthest. Mine was pretty simple, just an aerodynamic bottle, a cone, and wings shaped like an airplane's for greater lift. Our group ended picking Tristan's because it was unique (and I left my chromebook on the day we chose). It has FANS AS PROPELLERS ON THE WINGS. We also made paper airplanes. I made mine from memory and it goes far but it wasn't very accurate.</h8>
+<br/>
+    <img src = "paper airplane.jpg" Width = 200 px Height = 200px>
 </html>
