--- a/index.html
+++ b/index.html
@@ -221,7 +221,21 @@
         <td> <img src = "tstoar.jpg" Width = 200 px Height = 300px> </td>
     </tr>
 
-    
+    <tr>
+        <td>Week 14
+            <br/>
+            4/21/23</td>
+
+        <td>Using a disassembled white cardboard box, we made the paddles. Following that, we divided the box in half to form a triangle that would fit over the end of the oar. To put it onto the oar, we cut the cardboard piece to size. As a test, we taped an oar completely while attempting to use the least amount of tape. We had issues with the oar bending, for example. We reasoned that adding more cardboard to the oar's interior would be necessary to address the problem. This will be done next week since we didn't have time to accomplish it this week.</td>
+    </tr>
+
+    <tr>
+        <td>Week 15
+            <br/>
+            4/28/23</td>
+
+        <td>Our team created a new oar, but this time we added extra tape for more support. We reasoned that the less we moved it about, the less it would crease, therefore we are not touching it right now. We completed the prototype, and we then had to decide how much weight to use for the boat. We calculated that the prototype would require a weight of 22.5 pounds because it is 1/12 scale (1 inch for 1 foot) and the boat can hold a total of 270 pounds. However, the prototype was only 10 inches long, 5 inches less than if it were complete, so it was only intended to support 18 pounds. The prototype we used for testing was a complete failure. It collapsed instantly because it couldn't support a brick because the weight was unevenly distributed. We began construction on the real boat and cut out the U-curves it will have to counteract the prototype's failings.</td>
+    </tr>
 </table>
 
 
