--- a/index.html
+++ b/index.html
@@ -240,6 +240,16 @@
 
         <td> <img src = "bttest.jpg" Width = 200 px Height = 300px> </td>
     </tr>
+
+    <tr>
+        <td>Week 16
+            <br/>>
+            5/5/23</td>
+
+        <td>Our team began developing the final boat. The body of the boat, which was made of two cardboard pieces taped together, was measured at 6 feet. Next, we had to determine how to create the boat's front curve. After some time, Tristan discovered how to cutout a number of triangles and put them together to form a sort of curve. The following day, we constructed this curve and began designing the back as well. We still intend to finish the boat in two layers, so work on that must begin the following week. To prevent an instant sinking due to water flooding in,we must also construct the boat's walls.</td>
+
+        <td> <img src = "long.JPG" Width = 200 px Height = 300px> </td>
+    </tr>
 </table>
 
 
