--- a/index.html
+++ b/index.html
@@ -243,12 +243,33 @@
 
     <tr>
         <td>Week 16
-            <br/>>
+            <br/>
             5/5/23</td>
 
         <td>Our team began developing the final boat. The body of the boat, which was made of two cardboard pieces taped together, was measured at 6 feet. Next, we had to determine how to create the boat's front curve. After some time, Tristan discovered how to cutout a number of triangles and put them together to form a sort of curve. The following day, we constructed this curve and began designing the back as well. We still intend to finish the boat in two layers, so work on that must begin the following week. To prevent an instant sinking due to water flooding in,we must also construct the boat's walls.</td>
 
         <td> <img src = "long.JPG" Width = 200 px Height = 300px> </td>
+    </tr>
+
+    <tr>
+        <td> Week 17
+            <br/>
+            5/12/23</td>
+
+        <td>All the pieces required for the curves of the boat's front were cut by our squad. We'll film them all together next week.
+            The paper roller coaster task was also completed by our team. A good length and two loops were required. We created a spiral and then entered a ramp. Due of the paper's haphazard folding, creating the spiral was quite difficult. The ramp turned into a loop, then into a lengthy pipe that descended sharply before turning back into a circle. Although it had a good length, we didn't spend too much time on the rollercoaster because we preferred to work on our boat.</td>
+
+        <td> <img src = "sexy.JPG" Width = 200 px Height = 300px> </td>
+    </tr>
+
+    <tr>
+        <td> Week 18
+            <br/>
+            5/19/23</td>
+
+        <td>After completing our paper roller coaster, we set aside this week to continue our boat-building efforts. On the first day, we attempted to tape one of the walls together, but this failed. Our boat was entirely damaged by the time we returned to it on the second day because we had to move it to another classroom. We finally succeeded in taping the boat together after improving our knowledge of the process. The walls are almost completely taped now. To fit in the gaps left by the walls, we must begin cutting triangles.</td>
+
+        <td> <img src = "frontboat.JPG" Width = 200 px Height = 300px> </td>
     </tr>
 </table>
 
