--- a/index.html
+++ b/index.html
@@ -271,6 +271,17 @@
 
         <td> <img src = "frontboat.JPG" Width = 200 px Height = 300px> </td>
     </tr>
+
+    <tr>
+        <td> Week 19
+            <br/>
+            5/26/23</td>
+
+        <td>Once more, we spent the entire week working on the boat. The triangles were all cut out and pasted together. Since we couldn't flip the boat over completely, it was tough to tape the bottom. But we reasoned that we could raise the boat and slid the tape down. We taped all of the boat's bottom corners after it worked so well. Once we had the bottom in place, we walked around and strengthened the other tapes because they were so frail. The holes in the boat were also taped. Finally, we strengthened the oars and decided that we didn't have enough time to construct two additional oars, so we simply used the first two that we had built.</td>
+
+        <td> <img src = "completeBoat.jpg" Width = 200 px Height = 300px> </td>
+    </tr>
+
 </table>
 
 
